fix: 기사 제목이 길어지면 overflow 되는 현상 수정

--- a/src/components/rollingNewsBar/rollingNewsBar.scss
+++ b/src/components/rollingNewsBar/rollingNewsBar.scss
@@ -29,6 +29,7 @@ $rolling-news-bar-height: 46px;
 
   &__item {
     padding: 16px;
+    white-space: nowrap;
 
     display: flex;
     gap: 16px;
@@ -46,6 +47,8 @@ $rolling-news-bar-height: 46px;
     text-decoration: none;
     color: common.$gray-500;
     cursor: pointer;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     &:hover {
       text-decoration: underline;
